[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamicTasteDistortion"
version = "0.1.0"
description = "Simulation framework for modeling dynamic taste distortion in recommender systems"
readme = "README.md"
requires-python = ">=3.9"

dependencies = ["numpy", "pandas", "scipy", "scikit-learn", "tqdm"]

[project.scripts]
bootstrap-preferences = "dynamicTasteDistortion.bootstrap_preferences:main"
preference-model = "dynamicTasteDistortion.preference_model:main"
load-datasets = "dynamicTasteDistortion.dataset_loader:main"
simulate-recommendation = "dynamicTasteDistortion.simulation.simulator_client:main"

[tool.setuptools.packages.find]
where = ["."]
